templates/postgres-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: postgres
 
spec:
  replicas: 1
  selector:
    matchLabels:
      app: postgres
  template:
    metadata:
      labels:
        app: postgres
    spec:
      containers:
        - name: postgres
          image: quay.io/fedora/postgresql-16:latest
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 5432
        - name: POSTGRESQL_USER
          value: guestbook
        - name: POSTGRESQL_DATABASE
          value: guestbook
        - name: POSTGRESQL_PASSWORD
          value: password
