templates/redis-deployment.yaml

apiVersion: apps/v1
kind: Deployment
metadata:
  name: redis
 
spec:
  replicas: 1
  selector:
    matchLabels:
      app: redis
  template:
    metadata:
      labels:
        app: redis
    spec:
      containers:
        - name: redis
          image: quay.io/kurs/redis:latest
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 6379
        - name: REDIS_PASSWORD
          value: password
